chrome/test/data/nacl/bad/partly_invalid.nmf
{
  "program": {
    "x86-32": {"url": "partly_invalid.nexe"},
    "x86-64": {"url": "partly_invalid.nexe"},
    "arm": {"url": "partly_invalid.nexe"},
    "mips32": {"url": "partly_invalid.nexe"}
  }
}
